Fixed postulants table not being displayed properly on mobile.

--- a/src/app/postulants/postulants.component.scss
+++ b/src/app/postulants/postulants.component.scss
@@ -1,5 +1,6 @@
 .ticket-filter {
   display: flex;
+  flex-wrap: wrap;
 
   [type='radio']:not(:checked) + span,
   [type='radio']:checked + span {
